--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <div class="control">
       <label>（任意）Cloudflare Workers プロキシURL</label>
-      <input type="text" id="workerUrl" placeholder="https://xxx.workers.dev/?url=">
+      <input type="text" id="workerUrl" placeholder="https://cors-proxy.anchobi975.workers.dev/?url=">
       <small style="color:#8aa1b1">モバイルアプリ内WebView等でCORSが強い場合に設定（保存されます）。</small>
     </div>
   </section>
